// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WarningCallout adds visually hidden text when necessary: WarningCalloutWithTextRole 1`] = `
<div>
  <div
    class="nhsuk-warning-callout"
  >
    <h3
      class="nhsuk-warning-callout__label"
    >
      <span
        role="text"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Important: 
        </span>
        School, nursery or work
      </span>
    </h3>
    <p>
      Stay away from school, nursery or work until all the spots have crusted over. This is usually 5 days after the spots first appeared.
    </p>
  </div>
</div>
`;

exports[`WarningCallout matches snapshot: WarningCallout 1`] = `
<div>
  <div
    class="nhsuk-warning-callout"
  >
    <h3
      class="nhsuk-warning-callout__label"
    >
      Important
      <span
        class="nhsuk-u-visually-hidden"
      >
        :
      </span>
    </h3>
    <p>
      For safety, tell your doctor or pharmacist if you're taking any other medicines, including herbal medicines, vitamins or supplements.
    </p>
  </div>
</div>
`;
